--- a/index.html
+++ b/index.html
@@ -98,6 +98,113 @@
                     </div>
                </div>
           </div>
+
+          <!-- Practise Section -->
+          <section class="container mx-auto my-5">
+               <!-- Card Text -->
+               <div class="card_text my-5 text-center ">
+                    <h1 class="font-bold ff text-xl lg:text-3xl my-2">The Legal Practice Area</h1>
+                    <p class="text-sm">There are many variations of passages of Lorem Ipsum available, but the majority
+                         have suffered
+                         alteration in some form,
+                         by injected humour.</p>
+               </div>
+
+               <!-- card section  -->
+               <div class="practise_section grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 my-8 gap-3">
+                    <div class="card w-96 border-2 border-slate-100">
+                         <figure class="px-10 pt-10">
+                              <img src="images/business.png" alt="business" class="" />
+                         </figure>
+                         <div class="card-body items-center text-center">
+                              <h2 class="card-title ff text-3xl">Business Law</h2>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                   suffered alteration in some form,
+                                   by injected humour.</p>
+                              <div class="card-actions">
+                                   <button class="btn bgColor rounded-full mt-4"><img src="images/arrow-right-solid.svg"
+                                             alt="arrow"></button>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="card w-96 bg-gradient-to-b from-[#F3F3F3] border-2 border-slate-100">
+                         <figure class="px-10 pt-10">
+                              <img src="images/criminal.png" alt="business" class="" />
+                         </figure>
+                         <div class="card-body items-center text-center">
+                              <h2 class="card-title ff text-3xl">Criminal Law</h2>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                   suffered alteration in some form,
+                                   by injected humour.</p>
+                              <div class="card-actions">
+                                   <button class="btn bgColor rounded-full mt-4"><img src="images/arrow-right-solid.svg"
+                                             alt="arrow"></button>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="card w-96 border-2 border-slate-100">
+                         <figure class="px-10 pt-10">
+                              <img src="images/child.png" alt="business" class="" />
+                         </figure>
+                         <div class="card-body items-center text-center">
+                              <h2 class="card-title ff text-3xl">Child Support</h2>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                   suffered alteration in some form,
+                                   by injected humour.</p>
+                              <div class="card-actions">
+                                   <button class="btn bgColor rounded-full mt-4"><img src="images/arrow-right-solid.svg"
+                                             alt="arrow"></button>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="card w-96 border-2 border-slate-100">
+                         <figure class="px-10 pt-10">
+                              <img src="images/education.png" alt="business" class="" />
+                         </figure>
+                         <div class="card-body items-center text-center">
+                              <h2 class="card-title ff text-3xl">Education Law</h2>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                   suffered alteration in some form,
+                                   by injected humour.</p>
+                              <div class="card-actions">
+                                   <button class="btn bgColor rounded-full mt-4"><img src="images/arrow-right-solid.svg"
+                                             alt="arrow"></button>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="card w-96 border-2 border-slate-100">
+                         <figure class="px-10 pt-10">
+                              <img src="images/divorce.png" alt="business" class="" />
+                         </figure>
+                         <div class="card-body items-center text-center">
+                              <h2 class="card-title ff text-3xl">Divorce Law</h2>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                   suffered alteration in some form,
+                                   by injected humour.</p>
+                              <div class="card-actions">
+                                   <button class="btn bgColor rounded-full mt-4"><img src="images/arrow-right-solid.svg"
+                                             alt="arrow"></button>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="card w-96 border-2 border-slate-100">
+                         <figure class="px-10 pt-10">
+                              <img src="images/tax.png" alt="business" class="" />
+                         </figure>
+                         <div class="card-body items-center text-center">
+                              <h2 class="card-title ff text-3xl">tax Law</h2>
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                   suffered alteration in some form,
+                                   by injected humour.</p>
+                              <div class="card-actions">
+                                   <button class="btn bgColor rounded-full mt-4"><img src="images/arrow-right-solid.svg"
+                                             alt="arrow"></button>
+                              </div>
+                         </div>
+                    </div>
+               </div>
+          </section>
+
      </main>
 </body>
 
