--- a/index.html
+++ b/index.html
@@ -205,6 +205,40 @@
                </div>
           </section>
 
+
+          <!-- review sectin  -->
+          <section class="container mx-auto my-12">
+               <div class="review text-center my-5">
+                    <h1 class="ff font-bold text-3xl space-y-10">What Our Client Say</h1>
+                    <p class="pop my-4">There are many variations of passages of Lorem Ipsum available, but the majority
+                         have <br> suffered alteration in some form,
+                         by injected humour.</p>
+               </div>
+               <<div class="carousel w-full">
+                    <div id="slide1" class="carousel-item relative w-full ">
+                         <img class="bg-gradient-to-r[#111111CC]"  src="images/slider-1.jpg" class="w-full" />
+                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                              <a href="#slide3" class="btn btn-circle">❮</a>
+                              <a href="#slide2" class="btn btn-circle">❯</a>
+                         </div>
+                    </div>
+                    <div id="slide2" class="carousel-item relative w-full">
+                         <img src="images/slider-2.jpg" class="w-full" />
+                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                              <a href="#slide1" class="btn btn-circle">❮</a>
+                              <a href="#slide3" class="btn btn-circle">❯</a>
+                         </div>
+                    </div>
+                    <div id="slide3" class="carousel-item relative w-full">
+                         <img src="images/slider-3.jpg" class="w-full" />
+
+                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                              <a href="#slide2" class="btn btn-circle">❮</a>
+                              <a href="#slide1" class="btn btn-circle">❯</a>
+                         </div>
+                    </div>
+                    </div>
+          </section>
      </main>
 </body>
 
