--- a/index.html
+++ b/index.html
@@ -215,11 +215,18 @@
                          by injected humour.</p>
                </div>
                <<div class="carousel w-full">
-                    <div id="slide1" class="carousel-item relative w-full ">
+                    <div id="slide1" class="carousel-item relative w-full">
                          <img class="bg-gradient-to-r[#111111CC]"  src="images/slider-1.jpg" class="w-full" />
                          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                               <a href="#slide3" class="btn btn-circle">❮</a>
                               <a href="#slide2" class="btn btn-circle">❯</a>
+                         </div>
+                         <!-- <div class="absolute top-1/2 left-1/2 -translate-x-1/2 "> -->
+                         <div class="flex flex-col justify-center items-center text-base lg:absolute lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 text-center text-white pop">
+                              <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
+                              <h1 class="text-2xl ">Jerry Bean</h1>
+                              <p>Designer</p>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit harum praesentium eos dolore tempore ad! Quibusdam, excepturi beatae!</p>
                          </div>
                     </div>
                     <div id="slide2" class="carousel-item relative w-full">
@@ -228,6 +235,13 @@
                               <a href="#slide1" class="btn btn-circle">❮</a>
                               <a href="#slide3" class="btn btn-circle">❯</a>
                          </div>
+                              <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
+                                   <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
+                                   <h1 class="text-2xl ">Jerry Bean</h1>
+                                   <p>Designer</p>
+                                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit harum praesentium eos dolore
+                                        tempore ad! Quibusdam, excepturi beatae!</p>
+                              </div>
                     </div>
                     <div id="slide3" class="carousel-item relative w-full">
                          <img src="images/slider-3.jpg" class="w-full" />
@@ -236,8 +250,20 @@
                               <a href="#slide2" class="btn btn-circle">❮</a>
                               <a href="#slide1" class="btn btn-circle">❯</a>
                          </div>
+                              <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
+                                   <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
+                                   <h1 class="text-2xl ">Jerry Bean</h1>
+                                   <p>Designer</p>
+                                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit harum praesentium eos dolore
+                                        tempore ad! Quibusdam, excepturi beatae!</p>
+                              </div>
                     </div>
                     </div>
+          </section>
+
+          <!-- Contact Section -->
+          <section>
+               
           </section>
      </main>
 </body>
