--- a/index.html
+++ b/index.html
@@ -216,17 +216,19 @@
                </div>
                <<div class="carousel w-full">
                     <div id="slide1" class="carousel-item relative w-full">
-                         <img class="bg-gradient-to-r[#111111CC]"  src="images/slider-1.jpg" class="w-full" />
+                         <img class="bg-gradient-to-r[#111111CC]" src="images/slider-1.jpg" class="w-full" />
                          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                               <a href="#slide3" class="btn btn-circle">❮</a>
                               <a href="#slide2" class="btn btn-circle">❯</a>
                          </div>
                          <!-- <div class="absolute top-1/2 left-1/2 -translate-x-1/2 "> -->
-                         <div class="flex flex-col justify-center items-center text-base lg:absolute lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 text-center text-white pop">
+                         <div
+                              class="flex flex-col justify-center items-center text-base lg:absolute lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 text-center text-white pop">
                               <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
                               <h1 class="text-2xl ">Jerry Bean</h1>
                               <p>Designer</p>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit harum praesentium eos dolore tempore ad! Quibusdam, excepturi beatae!</p>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit
+                                   harum praesentium eos dolore tempore ad! Quibusdam, excepturi beatae!</p>
                          </div>
                     </div>
                     <div id="slide2" class="carousel-item relative w-full">
@@ -235,13 +237,14 @@
                               <a href="#slide1" class="btn btn-circle">❮</a>
                               <a href="#slide3" class="btn btn-circle">❯</a>
                          </div>
-                              <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
-                                   <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
-                                   <h1 class="text-2xl ">Jerry Bean</h1>
-                                   <p>Designer</p>
-                                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit harum praesentium eos dolore
-                                        tempore ad! Quibusdam, excepturi beatae!</p>
-                              </div>
+                         <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
+                              <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
+                              <h1 class="text-2xl ">Jerry Bean</h1>
+                              <p>Designer</p>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit
+                                   harum praesentium eos dolore
+                                   tempore ad! Quibusdam, excepturi beatae!</p>
+                         </div>
                     </div>
                     <div id="slide3" class="carousel-item relative w-full">
                          <img src="images/slider-3.jpg" class="w-full" />
@@ -250,20 +253,60 @@
                               <a href="#slide2" class="btn btn-circle">❮</a>
                               <a href="#slide1" class="btn btn-circle">❯</a>
                          </div>
-                              <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
-                                   <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
-                                   <h1 class="text-2xl ">Jerry Bean</h1>
-                                   <p>Designer</p>
-                                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit harum praesentium eos dolore
-                                        tempore ad! Quibusdam, excepturi beatae!</p>
-                              </div>
+                         <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
+                              <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
+                              <h1 class="text-2xl ">Jerry Bean</h1>
+                              <p>Designer</p>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit
+                                   harum praesentium eos dolore
+                                   tempore ad! Quibusdam, excepturi beatae!</p>
+                         </div>
                     </div>
                     </div>
           </section>
 
           <!-- Contact Section -->
           <section>
-               
+               <div class="container mx-auto">
+                    <div class="heading text-center pop space-y-8">
+                         <h1 class="font-bold text-xl lg:text-4xl">Contact</h1>
+                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, asperiores?</p>
+                    </div>
+                    <div class="mainForm flex flex-col justify-center items-center my-5 lg:justify-between lg:my-8 lg:flex-row">
+                         <div class="form-left grid grid-cols-1 gap-6 w-2/3 lg:grid-cols-2">
+                              <div class="box text-center bg-slate-200 space-y-2 py-10">
+                                   <img class="inline" src="images/address.png" alt="">
+                                   <p>Lorem, ipsum.</p>
+                                   <p>Lorem, ipsum.</p>
+                              </div>
+                              <div class="box text-center bg-slate-200 space-y-2 py-10">
+                                   <img class="inline" src="images/email.png" alt="">
+                                   <p>Lorem, ipsum.</p>
+                                   <p>Lorem, ipsum.</p>
+                              </div>
+                              <div class="box text-center bg-slate-200 space-y-2 py-10">
+                                   <img class="inline" src="images/call.png" alt="">
+                                   <p>Lorem, ipsum.</p>
+                                   <p>Lorem, ipsum.</p>
+                              </div>
+                              <div class="box text-center bg-slate-200 space-y-2 py-10">
+                                   <img class="inline" src="images/time.png" alt="">
+                                   <p>Lorem, ipsum.</p>
+                                   <p>Lorem, ipsum.</p>
+                              </div>
+                         </div>
+                         <div class="form-right w-2/3 my-5 grid place-items-center mx-4 space-y-5">
+                              <input type="text" placeholder="Type here"
+                                   class="input input-bordered w-full max-w-full  block" />
+                              <input type="text" placeholder="Type here"
+                                   class="input input-bordered w-full max-w-full  block" />
+                              <input type="text" placeholder="Type here"
+                                   class="input input-bordered w-full max-w-full  block" />
+                              <textarea class="textarea textarea-bordered" placeholder="Bio"></textarea>
+                              <button class="btn btn-block w-full max-w-full pop bgColor text-white space-x-5">SUBMIT</button>
+                         </div>
+                    </div>
+               </div>
           </section>
      </main>
 </body>
