--- a/index.html
+++ b/index.html
@@ -214,55 +214,64 @@
                          have <br> suffered alteration in some form,
                          by injected humour.</p>
                </div>
-               <<div class="carousel w-full">
-                    <div id="slide1" class="carousel-item relative w-full">
-                         <img class="bg-gradient-to-r[#111111CC]" src="images/slider-1.jpg" class="w-full" />
-                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+
+               <!-- carousel -->
+               <div class="carousel w-full container mx-auto">
+                    <div id="slide1"
+                         class="container mx-auto carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/slider-1.jpg)] h-[60vh] bg-cover bg-center rounded-lg lg:p-20">
+                         <div class="absolute bottom-5 left-1/3 lg:left-12">
                               <a href="#slide3" class="btn btn-circle">❮</a>
                               <a href="#slide2" class="btn btn-circle">❯</a>
                          </div>
-                         <!-- <div class="absolute top-1/2 left-1/2 -translate-x-1/2 "> -->
                          <div
-                              class="flex flex-col justify-center items-center text-base lg:absolute lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 text-center text-white pop">
-                              <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
-                              <h1 class="text-2xl ">Jerry Bean</h1>
-                              <p>Designer</p>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit
-                                   harum praesentium eos dolore tempore ad! Quibusdam, excepturi beatae!</p>
+                              class="text_content text-white text-center flex flex-col justify-center items-center space-y-5 my-4">
+                              <h1 class="font-bold text-xl lg:text-3xl">Lorem ipsum dolor sit amet.</h1>
+                              <p class="text-sm lg:w-1/2 lg:mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing
+                                   elit. Esse culpa cupiditate, iure dicta debitis perferendis architecto voluptatem
+                                   eveniet, possimus minima natus reiciendis deserunt odit porro unde sint. Mollitia
+                                   quibusdam maiores facilis corrupti fugit ipsa perferendis esse eius obcaecati, iusto
+                                   sit ab neque reiciendis, reprehenderit modi cum ullam. Doloremque, quibusdam
+                                   cupiditate!</p>
                          </div>
                     </div>
-                    <div id="slide2" class="carousel-item relative w-full">
-                         <img src="images/slider-2.jpg" class="w-full" />
-                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <div id="slide2"
+                         class="container mx-auto carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/slider-2.jpg)] h-[60vh] bg-cover bg-center rounded-lg lg:p-20">
+                         <div class="absolute bottom-5 left-1/3 lg:left-12">
                               <a href="#slide1" class="btn btn-circle">❮</a>
                               <a href="#slide3" class="btn btn-circle">❯</a>
                          </div>
-                         <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
-                              <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
-                              <h1 class="text-2xl ">Jerry Bean</h1>
-                              <p>Designer</p>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit
-                                   harum praesentium eos dolore
-                                   tempore ad! Quibusdam, excepturi beatae!</p>
+                         <div
+                              class="text_content text-white text-center flex flex-col justify-center items-center space-y-5 my-4">
+                              <h1 class="font-bold text-xl lg:text-3xl">Lorem ipsum dolor sit amet.</h1>
+                              <p class="text-sm lg:w-1/2 lg:mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing
+                                   elit. Esse culpa cupiditate, iure dicta debitis perferendis architecto voluptatem
+                                   eveniet, possimus minima natus reiciendis deserunt odit porro unde sint. Mollitia
+                                   quibusdam maiores facilis corrupti fugit ipsa perferendis esse eius obcaecati, iusto
+                                   sit ab neque reiciendis, reprehenderit modi cum ullam. Doloremque, quibusdam
+                                   cupiditate!</p>
                          </div>
                     </div>
-                    <div id="slide3" class="carousel-item relative w-full">
-                         <img src="images/slider-3.jpg" class="w-full" />
-
-                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <div id="slide3"
+                         class="container mx-auto carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(images/slider-3.jpg)] h-[60vh] bg-cover bg-center rounded-lg lg:p-20">
+                         <div class="absolute bottom-5 left-1/3 lg:left-12">
                               <a href="#slide2" class="btn btn-circle">❮</a>
                               <a href="#slide1" class="btn btn-circle">❯</a>
                          </div>
-                         <div class="absolute top-1/2 left-1/2 -translate-x-1/2 text-center text-white pop">
-                              <img class="w-16 inline" src="images/user-tie-solid.svg" alt="user">
-                              <h1 class="text-2xl ">Jerry Bean</h1>
-                              <p>Designer</p>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque animi reprehenderit
-                                   harum praesentium eos dolore
-                                   tempore ad! Quibusdam, excepturi beatae!</p>
+                         <div
+                              class="text_content text-white text-center flex flex-col justify-center items-center space-y-5 my-4">
+                              <h1 class="font-bold text-xl lg:text-3xl">Lorem ipsum dolor sit amet.</h1>
+                              <p class="text-sm lg:w-1/2 lg:mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing
+                                   elit. Esse culpa cupiditate, iure dicta debitis perferendis architecto voluptatem
+                                   eveniet, possimus minima natus reiciendis deserunt odit porro unde sint. Mollitia
+                                   quibusdam maiores facilis corrupti fugit ipsa perferendis esse eius obcaecati, iusto
+                                   sit ab neque reiciendis, reprehenderit modi cum ullam. Doloremque, quibusdam
+                                   cupiditate!</p>
                          </div>
                     </div>
-                    </div>
+
+               </div>
+
+
           </section>
 
           <!-- Contact Section -->
@@ -272,7 +281,8 @@
                          <h1 class="font-bold text-xl lg:text-4xl">Contact</h1>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, asperiores?</p>
                     </div>
-                    <div class="mainForm flex flex-col justify-center items-center my-5 lg:justify-between lg:my-8 lg:flex-row">
+                    <div
+                         class="mainForm flex flex-col justify-center items-center my-5 lg:justify-between lg:my-8 lg:flex-row">
                          <div class="form-left grid grid-cols-1 gap-6 w-2/3 lg:grid-cols-2">
                               <div class="box text-center bg-slate-200 space-y-2 py-10">
                                    <img class="inline" src="images/address.png" alt="">
@@ -303,7 +313,8 @@
                               <input type="text" placeholder="Type here"
                                    class="input input-bordered w-full max-w-full  block" />
                               <textarea class="textarea textarea-bordered" placeholder="Bio"></textarea>
-                              <button class="btn btn-block w-full max-w-full pop bgColor text-white space-x-5">SUBMIT</button>
+                              <button
+                                   class="btn btn-block w-full max-w-full pop bgColor text-white space-x-5">SUBMIT</button>
                          </div>
                     </div>
                </div>
