--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                    class="input input-bordered w-full max-w-full  block" />
                               <input type="text" placeholder="Type here"
                                    class="input input-bordered w-full max-w-full  block" />
-                              <textarea class="textarea textarea-bordered" placeholder="Bio"></textarea>
+                              <textarea class="textarea textarea-bordered w-full" placeholder="Bio"></textarea>
                               <button
                                    class="btn btn-block w-full max-w-full pop bgColor text-white space-x-5">SUBMIT</button>
                          </div>
@@ -320,6 +320,55 @@
                </div>
           </section>
      </main>
+
+     <!-- Footer Section  -->
+     <footer class="footer p-10 bg-base-200 text-base-content">
+          <aside>
+               <div>
+                    <img src="images/logo2.png" alt="">
+               </div>
+               <p>Legal Solutions<br />Providing reliable advice since 1992</p>
+          </aside>
+          <nav>
+               <header class="footer-title">Services</header>
+               <a class="link link-hover">Branding</a>
+               <a class="link link-hover">Design</a>
+               <a class="link link-hover">Marketing</a>
+               <a class="link link-hover">Advertisement</a>
+          </nav>
+          <nav>
+               <header class="footer-title">Company</header>
+               <a class="link link-hover">About us</a>
+               <a class="link link-hover">Contact</a>
+               <a class="link link-hover">Jobs</a>
+               <a class="link link-hover">Press kit</a>
+          </nav>
+          <nav>
+               <header class="footer-title">Legal</header>
+               <a class="link link-hover">Terms of use</a>
+               <a class="link link-hover">Privacy policy</a>
+               <a class="link link-hover">Cookie policy</a>
+          </nav>
+          <form>
+               <header class="footer-title">Newsletter</header>
+               <fieldset class="form-control w-80">
+                    <label class="label">
+                         <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join block lg:flex">
+                         <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
+                         <button class="bgColor join-item w-1/2 px-4 py-2 my-4 lg:m-0 lg:px-6 ">
+                              <div class="flex space-x-4 lg:px-4">
+
+                                   <p class="inline">Subscribe</p>
+                                   <img src="images/paper-plane-regular.svg" alt="" class="w-[20px]">
+                              </div>
+                         </button>
+                    </div>
+               </fieldset>
+          </form>
+
+     </footer>
 </body>
 
 </html>
